@startuml

class ParkingBoy {
 + ParkingLot select(List<ParkingLot> lots)
}
ParkingBoy o--> ParkingLot
class ParkLotRule {
 + List<ParkingLot> sort(List<ParkingLot> lots)
}
ParkingBoy -> ParkLotRule
ParkLotRule -> ParkingLot
class ParkingLot <<Entity>> <<Aggregate Root>>{
  - ParkingLotId id
  - int position
  + Ticket park(Car car)
  + Car take(Ticket ticket)
}
class Ticket <<Value Object>> {
  + boolean validate()
}
class Car <<Value Object>> {
 - String plateNumber
}
ParkingLot "1" *--> "*" Ticket
Ticket -> Car
ParkingLot ..> Car

@enduml
